--- a/src/app/components/product/product-listing/product-listing.component.html
+++ b/src/app/components/product/product-listing/product-listing.component.html
@@ -24,7 +24,7 @@
             <td>{{item.price}}</td>
             <td>
               <a (click)="onEdit(item)"><i class="fa-solid fa-pencil"></i></a>
-              <a><i class="fa-sharp fa-solid fa-trash"></i></a>
+              <a (click)="onDelete(item.id)"><i class="fa-sharp fa-solid fa-trash"></i></a>
             </td>      
           </tr>
         </tbody>
